<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/spacing16"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_converter"
        style="@style/defaultTextStyle.onBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/spacing16"
        android:maxLines="1"
        android:background="@drawable/background_input"
        android:paddingHorizontal="@dimen/spacing12"
        android:hint="@string/inter_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_clean_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/button_to_clear_input"
        android:padding="8dp"
        android:src="@drawable/clear"

        app:layout_constraintBottom_toBottomOf="@+id/input_converter"
        app:layout_constraintEnd_toEndOf="@+id/input_converter"
        app:layout_constraintTop_toTopOf="@+id/input_converter" />
<!--    android:visibility="invisible"-->
    <Spinner
        android:id="@+id/select_converter_from"
        android:layout_width="@dimen/spacing0"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="@dimen/spacing16"
        android:background="@drawable/background_spinner"
        android:prompt="@string/converter"
        app:layout_constraintStart_toStartOf="@+id/input_converter"
        app:layout_constraintTop_toBottomOf="@+id/input_converter"
        app:layout_constraintWidth_percent="0.45" />

    <ImageView
        android:id="@+id/icon_to"
        android:layout_width="@dimen/spacing0"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_arrow_converter"
        android:src="@drawable/to"
        app:layout_constraintBottom_toBottomOf="@+id/select_converter_from"
        app:layout_constraintEnd_toStartOf="@+id/select_converter_to"
        app:layout_constraintStart_toEndOf="@+id/select_converter_from"
        app:layout_constraintTop_toTopOf="@+id/select_converter_from" />

    <Spinner
        android:id="@+id/select_converter_to"
        android:layout_width="@dimen/spacing0"
        android:layout_height="@dimen/height_button"
        android:background="@drawable/background_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/select_converter_from"
        app:layout_constraintEnd_toEndOf="@+id/input_converter"
        app:layout_constraintStart_toEndOf="@+id/icon_to"
        app:layout_constraintTop_toTopOf="@+id/select_converter_from"
        app:layout_constraintWidth_percent="0.45" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_converter"
        style="@style/button"
        android:layout_width="@dimen/spacing0"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="@dimen/spacing24"
        android:text="@string/converter"
        app:layout_constraintEnd_toEndOf="@+id/input_converter"
        app:layout_constraintStart_toStartOf="@+id/input_converter"
        app:layout_constraintTop_toBottomOf="@+id/icon_to" />


    <TextView
        android:id="@+id/text_title_result"
        style="@style/defaultTextStyle.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_converter" />

    <TextView
        android:id="@+id/result"
        style="@style/defaultTextStyle.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_converter" />


</androidx.constraintlayout.widget.ConstraintLayout>